# SampleApps

./: README.md
ExcludeLibTest/: settings.gradle
IPCExample/: settings.gradle
KotlinSecond/: settings.gradle
MediaMuxer/: build.gradle
OpenGLESStudy/SampleAppCPP/: CMakeLists.txt  build.gradle
OpenGLESStudy/SampleAppCPP/src/androidTest/java/charlezz/com/videosampleapp/: ExampleInstrumentedTest.java
OpenGLESStudy/SampleAppCPP/src/main/: AndroidManifest.xml
OpenGLESStudy/SampleAppCPP/src/main/cpp/: SampleRenderer.cpp  SampleShaderCode.h
OpenGLESStudy/SampleAppCPP/src/main/java/charlezz/com/videosampleapp/: MainActivity.java  ShaderCode.java
OpenGLESStudy/SampleAppCPP/src/test/java/charlezz/com/videosampleapp/: ExampleUnitTest.java
OpenGLESStudy/SampleAppJava/: CMakeLists.txt  build.gradle
OpenGLESStudy/SampleAppJava/VideoPlayer/: AndroidPlayerManager.cpp  AndroidPlayerManager.h  ReadMe.txt  VideoPlayer.vcxproj  VideoPlayer.vcxproj.filters  VideoPlayerAPI.cpp  VideoPlayerManager.cpp  VideoPlayerManager.h  WindowsPlayerManager.cpp  WindowsPlayerManager.h
OpenGLESStudy/SampleAppJava/VideoPlayer/include/: Types.h  VideoPlayerAPI.h
OpenGLESStudy/SampleAppJava/src/androidTest/java/maxst/sampleapp/: ExampleInstrumentedTest.java
OpenGLESStudy/SampleAppJava/src/main/: AndroidManifest.xml
OpenGLESStudy/SampleAppJava/src/main/cpp/: SampleJni.cpp
OpenGLESStudy/SampleAppJava/src/main/java/maxst/sampleapp/: MainActivity.java  VideoGLRenderer.java  VideoLibraryInterface.java
OpenGLESStudy/SampleAppJava/src/test/java/maxst/sampleapp/: ExampleUnitTest.java
(+586 files in other folders)
